# lunarloc_data_collection

./: .gitignore  README.md  RunLeaderboard.sh  pyproject.toml
agents/: orbslam_agent_recorder_circle.py  orbslam_agent_recorder_straight_line.py  straight_line_agent.py
docker/: .gitignore  Dockerfile  make_docker.sh
resources/: .gitignore  orbslam_config.yaml
scripts/: build_docker.py  fastsam_checkpoint.py  orbslam_vocab.py  run_agent.py
